apps/oxlint/src/snapshots/fixtures__suppression_not_reporting_new_errors_--type-aware --type-check@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --type-check
working directory: fixtures/suppression_not_reporting_new_errors
----------

  x typescript(TS2584): Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
   ,-[folder_b/test.ts:1:1]
 1 | console.log();
   : ^^^^^^^
 2 | const foo: number = "42";
   `----

  x typescript(TS2322): Type 'string' is not assignable to type 'number'.
   ,-[folder_b/test.ts:2:7]
 1 | console.log();
 2 | const foo: number = "42";
   :       ^^^
 3 | 
   `----

Found 0 warnings and 2 errors.
Finished in <variable>ms on 2 files with 83 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
