apps/oxlint/src/snapshots/fixtures__suppression_prune_errors_warning_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/suppression_prune_errors_warning
----------

  x The 'eslint/no-console' rule has been pruned from folder_b/test.js.
  help: Update `oxlint-suppressions.json` file running `oxlint --prune-suppressions`

Found 0 warnings and 1 error.
'oxlint-suppressions.json' has been updated.
Finished in <variable>ms on 2 files with 55 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
