apps/oxlint/src/snapshots/fixtures__suppression_report_one_new_error_but_filter_the_rest_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/suppression_report_one_new_error_but_filter_the_rest
----------

  x 1 new 'eslint/no-debugger' error appeared in folder_b/test.js.
  help: Update `oxlint-suppressions.json` file running `oxlint --suppress--all`

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[folder_b/test.js:2:1]
 1 | console.log();
 2 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 2 errors.
'oxlint-suppressions.json' has been updated.
Finished in <variable>ms on 2 files with 56 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
