apps/oxlint/src/snapshots/fixtures__suppression_report_one_of_the_errors_from_one_file_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/suppression_report_one_of_the_errors_from_one_file
----------

  x The number of 'eslint/no-console' errors in folder_b/test.js increased from 1 to 3.
  help: Update `oxlint-suppressions.json` file running `oxlint --suppress--all`

  x eslint(no-console): Unexpected console statement.
   ,-[folder_b/test.js:1:1]
 1 | console.log();
   : ^^^^^^^^^^^
 2 | debugger;
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[folder_b/test.js:3:1]
 2 | debugger;
 3 | console.log();
   : ^^^^^^^^^^^
 4 | console.log();
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[folder_b/test.js:4:1]
 3 | console.log();
 4 | console.log();
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

Found 0 warnings and 4 errors.
'oxlint-suppressions.json' has been updated.
Finished in <variable>ms on 1 file with 56 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
